--- a/BioArchLinux/r-magrittr/PKGBUILD
+++ b/BioArchLinux/r-magrittr/PKGBUILD
@@ -3,12 +3,12 @@
 _pkgname=magrittr
 _pkgver=2.0.3
 pkgname=r-${_pkgname,,}
-pkgver=2.0.3
+pkgver=${_pkgver//-/.}
 pkgrel=8
-pkgdesc='A Forward-Pipe Operator for R'
-arch=('x86_64')
-url="https://cran.r-project.org/package=${_pkgname}"
-license=('MIT')
+pkgdesc="A Forward-Pipe Operator for R"
+arch=(x86_64)
+url="https://cran.r-project.org/package=$_pkgname"
+license=(MIT)
 depends=(
   r
 )
@@ -20,15 +20,18 @@ optdepends=(
   r-testthat
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
-sha256sums=('a2bff83f792a1acb801bfe6330bb62724c74d5308832f2cb6a6178336ace55d2')
+md5sums=('86a110ed23536ebe26c51ff90f2a1435')
+b2sums=('f4ebee352cc6e3de831d7a596d7f44b94bc77a19ad110fe53d6cb7d872bd71c0c83da7b6fad8063823fef6e42a12827b01cd2c5ce77b4e274a3abbcf68a0e772')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir build
+  R CMD INSTALL -l build "$_pkgname"
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
-  install -Dm644 "${_pkgname}/LICENSE" -t "${pkgdir}/usr/share/licenses/${pkgname}"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
+
+  install -d "$pkgdir/usr/share/licenses/$pkgname"
+  ln -s "/usr/lib/R/library/$_pkgname/LICENSE" "$pkgdir/usr/share/licenses/$pkgname"
 }
-# vim:set ts=2 sw=2 et:
